# Refactor_Task

./: CMakeLists.txt  UmlDiagram.drawio
include/: BLI_stack.h
src/: CMakeLists.txt  Makefile  stack.cc
tests/: CMakeLists.txt  CTestTestfile.cmake  StackTest  cmake_install.cmake  stack_test.cc
